fixed file name and added color

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 .header-wrapper {
-  background-color: #f5f5ef;
+  background-color: goldenrod;
 }
 
 .drawerContainer {
   padding: 50px 30px;
-  background-color: #f5f5ef;
+  background-color: goldenrod;
   height: 100%;
 }
 
