--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,4 +12,12 @@ li {
   list-style-type: none; 
   padding: 0; 
   margin: 0; 
+  color: #737373;
+  font-family: "Varela Round";
+  font-size: 2rem;
+  line-height: 2;
+}
+
+.MuiToolbar-regular {
+  background: goldenrod
 }
