--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,10 +11,11 @@
   padding-bottom: 5vh;
   align-items: flex-start;
   display: flex;
-  height: 50vh;
+  height: 40vh;
   display: visible;
   position: relative;
   left: 0em;
+  margin:0;
 }
 
 .logo-mobile {
@@ -30,14 +31,16 @@
 
 .center {
   width: 33%;
+  display: flex;
+  justify-content: center;
 }
 
 .left-side {
-  width: 33%;
+  width: 32%;
 }
 
 .right-side {
-  width: 33%;
+  width: 32%;
 }
 
 /* ////   Mobile   //// */
