--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,10 +8,10 @@
   height: 100%;
 }
 
-li {
-  list-style-type: none; 
-  padding: 0; 
-  margin: 0; 
+.titles-map li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
   color: #737373;
   font-family: "Varela Round";
   font-size: 2rem;
@@ -19,5 +19,5 @@ li {
 }
 
 .MuiToolbar-regular {
-  background: goldenrod
+  background: goldenrod;
 }
