--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,7 +1,20 @@
 .Contact {
-  margin-top: 15%;
+  padding-top: 12%;
   justify-content: center;
   display: flex;
+  background-color: rgb(150, 209, 209);
+  padding-bottom: 12%;  
+  color: #737373;
+  font-family: "Varela Round";
+}
+
+.contact-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form{
+  padding-top: 2%;
 }
 
 input {
@@ -28,7 +41,8 @@ div[role="alert"] {
 @media only screen and (max-width: 600px) {
 
   .Contact {
-    margin-top: 20%;
+    padding-top: 40%;
+    padding-bottom: 20%;
   }
 
   input {
